feat: add e2e tests

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ dist
 .idea
 .vscode
 coverage
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
